feat(galaxio-gatling): split the router into three skills
An upgrade task loaded 444 lines of a 309-line writing skill plus four of
its references. It now loads 83, because the router no longer activates for
one. Three skills, one plugin:

  gatling-versions      every artifact coordinate, cut by consumer
  gatling-migration     moving between lines, 3.9.x to 3.15.x, standalone
  galaxio-gatling-pro   writing, reviewing, refactoring

`versions.md` is cut by consumer rather than by subject. `gatling-lines.md`
carries Gatling, Scala, Java and the build plugins and names Galaxio
nowhere; `galaxio-artifacts.md` carries the four Galaxio libraries. A link
points at a file and not a section, so only that cut makes "a project
without org.galaxio never sees Galaxio" enforceable rather than intended.

`gatling-migration` links nowhere at all. The build-plugin floors are
restated there because a threshold - a number that only means something
while crossing a line - belongs to the skill that crosses, and the skill
lifts into another plugin whole. The artifact matrix is not duplicated;
it left the migration route entirely. AGENTS.md now states that exception
and its bound.

`migrate.md` could not simply be deleted: three references linked it and
three facts lived nowhere else. proxyProtocolSourceIpV4Address/V6 and
logActualValueInError moved into protocol-http.md, the removal of the eager
and batch feeder modes into resource-files.md, and the --add-opens flag is
written out in all seven build references, since a build task never opens
the migration material.

Every threshold below was measured against real Gradle, Maven and sbt
projects rather than read out of upstream documentation. Seven claims did
not survive, and each had passed the structural checks and a review:

- The Gatling version on Gradle is `gatling { gatlingVersion = '…' }`. The
  plugin's own number is only the default, and the override wins even
  across lines. No reference had named it, which also made "a Gradle